feat: Add QueryResource for handling search queries
- Implemented QueryResource with endpoints for validating, parsing, and executing search queries.
- Added schema endpoint to serve JSON schema for search queries.
- Introduced SearchExecutionExceptionMapper for handling search execution errors.

refactor: Update SearchExecutionException and QueryTranslationException

- Refactored SearchExecutionException and QueryTranslationException to use Lombok's @StandardException for cleaner code.

refactor: Enhance QueryParseContext with new methods

- Added methods for building Elasticsearch and Solr queries in QueryParseContext.
- Improved handling of minimum match logic for query translations.

refactor: Simplify MappingRepository initialization

- Streamlined the initialization of mappings in MappingRepository using Java Streams.

fix: Remove unused sourceField from mapping JSON files

- Updated mapping JSON files to remove unnecessary sourceField entries.

test: Add comprehensive tests for QueryResource

- Created QueryResourceTest to validate query handling, parsing, and execution across different scenarios.
- Included tests for valid and invalid query structures, ensuring proper error handling and response formats.